# revu

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
docs/: adversarial-review.html
docs/agents/: domain.md
packaging/homebrew/: revu.rb
src/: app.rs  blame.rs  cli.rs  config.rs  diff.rs  fold.rs  highlight.rs  live.rs  main.rs  osc.rs  pager.rs  render.rs  search.rs  state.rs  theme.rs  worddiff.rs
src/snapshots/: revu__app__tests__renders_auto_split_when_wide.snap  revu__app__tests__renders_sidebar_and_main_view.snap  revu__render__tests__renders_collapsed_fold_to_buffer.snap  revu__render__tests__renders_diff_to_buffer.snap  revu__render__tests__renders_expanded_fold_to_buffer.snap  revu__render__tests__renders_split_layout_to_buffer.snap
src/vcs/: git.rs  mod.rs
tests/: supply_chain.rs
