[package]
name = "revu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A fast, memory-safe terminal diff/review tool (a Rust port of hunk)"
repository = "https://github.com/lgbarn/revu"
readme = "README.md"

[dependencies]
# clap: CLI parsing. ratatui: TUI rendering (re-exports crossterm, so no
# separate crossterm dependency). anyhow: ergonomic error propagation.
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"

# syntect: syntax highlighting. `default-features = false` + `default-fancy`
# selects the pure-Rust fancy-regex engine (NOT the C-linked oniguruma default)
# while still bundling the default SyntaxSet + ThemeSet. Keeps the core C-free.
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }

# rustix (pure Rust, no libc) only for dup2'ing /dev/tty onto stdin when a diff
# is piped in (pager mode). Same 0.38 version crossterm already links, so this
# enables the `stdio` feature on the existing copy rather than adding a crate.
[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["stdio"] }

[dev-dependencies]
# insta: snapshot testing of rendered terminal buffers.
insta = "1"
# tempfile: scratch git repos / files for VcsAdapter unit tests (dev only).
tempfile = "3"
