[package]
name = "revu"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A fast, memory-safe terminal diff/review tool (a Rust port of hunk)"
repository = "https://github.com/lgbarn/revu"
readme = "README.md"

# `cargo binstall revu` fetches the prebuilt release tarball instead of
# compiling. These MUST stay in sync with .github/workflows/release.yml, which
# uploads `revu-<target>.tar.gz` (binary at the archive root) to the GitHub
# Release tagged `v<version>`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
# clap: CLI parsing. ratatui: TUI rendering (re-exports crossterm, so no
# separate crossterm dependency). anyhow: ergonomic error propagation.
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"

# syntect: syntax highlighting. `default-features = false` + `default-fancy`
# selects the pure-Rust fancy-regex engine (NOT the C-linked oniguruma default)
# while still bundling the default SyntaxSet + ThemeSet. Keeps the core C-free.
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }

# similar: pure-Rust text diffing, used for intra-line word-level emphasis on
# modified lines (`TextDiff::from_words`). No C deps. Already in the tree as a
# transitive dev-dependency via insta; this promotes it to a direct runtime dep.
similar = "2"

# Config + view-state persistence. All three are pure Rust (no C linkage):
# - serde (derive): (de)serialize the config layers and the view-state struct.
# - toml: parse the global/repo-local config.toml layers (hunk-compatible keys).
# - serde_json: read/write the state.json view-state file.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# rustix (pure Rust, no libc) for two unix needs: `stdio` dup2's /dev/tty onto
# stdin when a diff is piped in (pager mode); `process` raises SIGTSTP on our own
# pid for Ctrl-Z suspend in the TUI. Same 0.38 version crossterm already links,
# so this only enables features on the existing copy rather than adding a crate.
[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["stdio", "process"] }

[dev-dependencies]
# insta: snapshot testing of rendered terminal buffers.
insta = "1"
# tempfile: scratch git repos / files for VcsAdapter unit tests (dev only).
tempfile = "3"
